# ulrea_cbt

./: LICENSE  README.md
backend/services/attempt_service/: pyproject.toml
backend/services/attempt_service/attempt_service/: dependencies.py  main.py
backend/services/attempt_service/attempt_service/database/: database.py  postgres_database.py
backend/services/attempt_service/attempt_service/schemas/: schemas.py
backend/services/attempt_service/attempt_service/services/: attempt_service.py
backend/services/attempt_service/attempt_service/tests/: conftest.py  test_attempts.py
backend/services/auth/: alembic.ini  dump.rdb  main.py  pyproject.toml
backend/services/auth/alembic/: env.py
backend/services/auth/alembic/versions/: af778ad43a09_initial_migration.py  e3a43df2281e_add_new_fields.py  fa2bb30ebc81_made_access_code_unique.py
backend/services/auth/auth/: main.py  pyproject.toml
backend/services/auth/auth/api_models/: __init__.py  auth_api_models.py  login_response.py  token.py  user_api_models.py
backend/services/auth/auth/core/: settings.py
backend/services/auth/auth/database/: __init__.py  database.py  postgres_database.py
backend/services/auth/auth/dependencies/: auth_dependencies.py  user_dependencies.py
backend/services/auth/auth/exceptions/: auth_exception.py
backend/services/auth/database/: database.py  database_interface.py  postgres_database.py
backend/services/auth/dependencies/: auth_dependencies.py  user_dependencies.py
backend/services/auth/models/: token.py  user.py
backend/services/auth/tests/: conftest.py
(+76 files in other folders)
